--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -10,13 +10,13 @@ editor_options:
 ## Introduction
 
 ```{r setup, include=F}
-knitr::opts_chunk$set(echo = FALSE)
+knitr::opts_chunk$set(echo = FALSE, include=F)
 ```
 
 ```{r test, error=F, out.width='100%'}
 library(tidyverse)
 library(glue)
 for (chr in 1:22){
-  knitr::include_graphics(glue("assets/meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.png"), error=F)
+  knitr::include_graphics(glue("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.png"), error=F)
 }
 ```
