--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -21,8 +21,6 @@ for (chr in 1:22){
 }
 ```
 
-```{r test2, echo=T, out.width='100%'}
-for (chr in c(1)){
-  knitr::include_graphics(glue("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.png"), error=F)
-}
+```{r test2, echo=T}
+knitr::include_graphics("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr1.png", error=F)
 ```
