--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -17,10 +17,12 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```{r test, echo=T, out.width='100%'}
 for (chr in 1:22){
-  knitr::include_graphics(glue("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.png"), error=F)
+  fname <- glue("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.png")
+  knitr::include_graphics(fname, error=F)
 }
 ```
 
 ```{r test2, echo=T}
 knitr::include_graphics("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr1.png", error=F)
+knitr::include_graphics("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr2.png", error=F)
 ```
