--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```{r test, echo=T, out.width='100%'}
 for (chr in 1:22){
-  fname <- glue("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.png")
+  fname <- as.character(glue("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.png"))
   knitr::include_graphics(fname, error=F)
 }
 ```
