--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -12,18 +12,18 @@ editor_options:
 ```{r setup, include=F}
 library(tidyverse)
 library(glue)
+library(cowplot)
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
 ```{r test, echo=T}
 for (chr in 1:22){
-  fname <- as.character(glue("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.png"))
-  knitr::include_graphics(fname, error=F)
-  knitr::include_graphics(glue("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.png"), error=F)
+  cur_diag_graph <- readRDS(glue("docs/assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr{chr}.rds"))
+  (cur_diag_graph)
 }
 ```
 
-```{r test2, echo=T}
+```{r test2, include=F}
 knitr::include_graphics("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr1.png", error=F)
 knitr::include_graphics("assets/ctwas_diag_meta_analysis_BCAC_UKB_ovr_brca__Breast_Mammary_Tissue__eqtl_chr2.png", error=F)
 ```
