--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -15,6 +15,10 @@ library(purrr)
 knitr::opts_chunk$set(echo = FALSE)
 options(dplyr.summarise.inform = FALSE)
 
+# https://github.com/rstudio/DT/issues/67
+# You need this code to conduct the magic dependences attaching...
+DT::datatable(matrix())
+
 source("code/prep_data.R")
 source("code/locus_plot.R")
 WANT_STUDIES <- c("meta_analysis_BCAC_UKB_ovr_brca")
@@ -33,33 +37,71 @@ for (study in WANT_STUDIES){
 #               )
 wt_idx <- 1
 
-do_figures <- function(chrom, region_tag2){
-  # First the locus plot
-  cur_tiss_chrom_region_mismatch_tracker <- cur_tiss_chrom_mismatch_tracker %>%
-    filter(region_tag2 == !!region_tag2)
 
-  label_genes <- cur_tiss_chrom_region_mismatch_tracker %>%
-    pull(`gene_id.v26`)
+do_tissue <- function(wt_idx){
+  # First a table showing all mismatching genes
+  do_chrom_region <- function(chrom, region_tag2){
+    # First the locus plot
+    cur_tiss_chrom_region_mismatch_tracker <- cur_tiss_chrom_mismatch_tracker %>%
+      filter(region_tag2 == !!region_tag2)
+  
+    pre_fig_table <- DT::datatable(cur_tiss_chrom_region_mismatch_tracker %>% 
+                  select(all_of(c("gene_id.v26", "gene_name.v40", "tiss_gwide_twas_bfr_sig", "tiss_bfr_thresh"))))
+    cat("\n\n")
+    cat(knitr::knit_print(pre_fig_table))
+    cat("\n\n")
+  
+    label_genes <- cur_tiss_chrom_region_mismatch_tracker %>%
+      pull(`gene_id.v26`)
+  
+    a <- locus_plot(WANT_STUDIES[1],
+                    want_tissues[wt_idx],
+                    prepped_data[["meta_analysis_BCAC_UKB_ovr_brca"]][["ctwas_res"]],
+                    chrom=chrom,
+                    region_tag2=region_tag2,
+                    eqtl_or_sqtl="eqtl",
+                    gwide_tiss_sig_thresh=gwide_tiss_sig_thresh,
+                    return_table=F,
+                    focus=NULL,
+                    label_genes=label_genes,
+                    rerun_ctwas=F,
+                    rerun_load_only=F,
+                    label_panel="both",
+                    legend_side="left",
+                    legend_panel="",
+                    draw_gene_track = F)
+  }
+  cur_tiss_mismatch_tracker <- mismatch_gene_tissue_tracker %>%
+    filter(tissue == want_tissues[wt_idx])
+  
+  gwide_tiss_sig_thresh <- cur_tiss_mismatch_tracker %>%
+    filter(tissue == want_tissues[wt_idx]) %>%
+    pull(tiss_bfr_thresh) %>%
+    max(., na.rm=T)
+  
+  cat("\n\n")
+  cat(knitr::knit_print(DT::datatable(cur_tiss_mismatch_tracker %>%
+                  arrange(chrom, region_tag2) %>%
+                  select(all_of(c("gene_id.v26", "gene_name.v40", "chrom", "tiss_gwide_twas_bfr_sig"))))))
+  cat("\n\n")
 
-  print(DT::datatable(cur_tiss_chrom_region_mismatch_tracker %>% 
-                select(all_of(c("gene_id.v26", "gene_name.v40", "tiss_gwide_twas_bfr_sig", "tiss_bfr_thresh")))))
+  cur_tiss_chrom_region_df <- cur_tiss_mismatch_tracker %>%
+    group_by(chrom, region_tag2) %>%
+    summarize() %>%
+    head(2) # debug
 
-  a <- locus_plot(WANT_STUDIES[1],
-                  want_tissues[wt_idx],
-                  prepped_data[["meta_analysis_BCAC_UKB_ovr_brca"]][["ctwas_res"]],
-                  chrom=chrom,
-                  region_tag2=region_tag2,
-                  eqtl_or_sqtl="eqtl",
-                  gwide_tiss_sig_thresh=gwide_tiss_sig_thresh,
-                  return_table=F,
-                  focus=NULL,
-                  label_genes=label_genes,
-                  rerun_ctwas=F,
-                  rerun_load_only=F,
-                  label_panel="both",
-                  legend_side="left",
-                  legend_panel="",
-                  draw_gene_track = F)
+  for (cur_chr in cur_tiss_mismatch_tracker %>% pull(chrom) %>% unique() %>% sort()){
+    cur_diag_graph <- readRDS(glue("output/cache/ctwas_diag_{WANT_STUDIES[1]}__{want_tissues[wt_idx]}__eqtl_chr{cur_chr}.rds"))
+    print(glue("Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
+    print(cur_diag_graph)
+  
+    cur_tiss_chrom_mismatch_tracker <- cur_tiss_mismatch_tracker %>%
+      filter(chrom == !!cur_chr)
+  
+    cur_tiss_chrom_region_df %>%
+      filter(chrom == !!cur_chr) %>%
+      pwalk(do_chrom_region)
+  }
 }
 ```
 
@@ -71,48 +113,16 @@ DT::datatable(top_mismatch_genes)
 
 ## By Tissue Figures and Tables
 
-### `r want_tissues[wt_idx]`
-
-Genome wide Bonferroni threshold for `r want_tissues[wt_idx]`: `r mismatch_gene_tissue_tracker %>% filter(tissue == want_tissues[wt_idx]) %>% pull(tiss_bfr_thresh) %>% max(., na.rm=T)`.
-```{r tiss1, message=T,warning=F}
-# First a table showing all mismatching genes
-cur_tiss_mismatch_tracker <- mismatch_gene_tissue_tracker %>%
-  filter(tissue == want_tissues[wt_idx])
-
-gwide_tiss_sig_thresh <- mismatch_gene_tissue_tracker %>%
-  filter(tissue == want_tissues[wt_idx]) %>%
-  pull(tiss_bfr_thresh) %>%
-  max(., na.rm=T)
-
-DT::datatable(cur_tiss_mismatch_tracker %>%
-                arrange(chrom, region_tag2) %>%
-                select(all_of(c("gene_id.v26", "gene_name.v40", "chrom", "tiss_gwide_twas_bfr_sig"))))
-
-cur_tiss_chrom_region_df <- cur_tiss_mismatch_tracker %>%
-  group_by(chrom, region_tag2) %>%
-  summarize() %>%
-  head() # debug
-
-for (cur_chr in mismatch_gene_tissue_tracker %>% pull(chrom) %>% unique() %>% sort()){
-  cur_diag_graph <- readRDS(glue("output/cache/ctwas_diag_{WANT_STUDIES[1]}__{want_tissues[wt_idx]}__eqtl_chr{cur_chr}.rds"))
-  print(glue("Chromosome {cur_chr}"))
-  print(cur_diag_graph)
-
-  cur_tiss_chrom_mismatch_tracker <- cur_tiss_mismatch_tracker %>%
-    filter(chrom == !!cur_chr)
-
-
-  cur_tiss_chrom_region_df %>%
-    filter(chrom == !!cur_chr) %>%
-    pwalk(do_figures)
-}
-
-wt_idx <- wt_idx + 1
+```{r iterate_tissues, message=F,warning=F}
 ```
 
 ### `r want_tissues[wt_idx]`
 
 Genome wide Bonferroni threshold for `r want_tissues[wt_idx]`: `r mismatch_gene_tissue_tracker %>% filter(tissue == want_tissues[wt_idx]) %>% pull(tiss_bfr_thresh) %>% max(., na.rm=T)`.
+
+```{r tiss1, message=T,warning=F}
+do_tissue(wt_idx)
+```
 
  #### `r want_tissues[wt_idx]` ### `r want_tissues[3]`
  #### `r want_tissues[wt_idx]` ### `r want_tissues[4]`
