--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -123,13 +123,19 @@ DT::datatable(top_mismatch_genes)
 ## By Tissue Figures and Tables
 
 ```{r iterate_tissues, message=F,warning=F}
+out = NULL
+for (i in 1:length(want_tissues)){
+  out <- c(out, knitr::knit_expand("analysis/chunks/tissue_chunk.Rmd"))
+}
 ```
+
+`r paste(knitr::knit(text=out), collapse='\n')`
 
 ### `r want_tissues[wt_idx]`
 
 Genome wide Bonferroni threshold for `r want_tissues[wt_idx]`: `r mismatch_gene_tissue_tracker %>% filter(tissue == want_tissues[wt_idx]) %>% pull(tiss_bfr_thresh) %>% max(., na.rm=T)`.
 
-```{r tiss1, results='asis', message=T,warning=F}
+```{r tiss, results='asis', message=T,warning=F}
 do_tissue(wt_idx)
 dt_idx <- wt_idx + 1
 ```
