--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -28,13 +28,13 @@ for (study in WANT_STUDIES){
   attach(prepped_data[[study]])
 }
   
-# rlist <- list(top_mismatch_genes = top_mismatch_genes,
-#               mismatch_gene_tissue_tracker = mismatch_gene_tissue_tracker,
-#               want_tissues=want_tissues,
-#               ctwas_res=ctwas_res,
-#               focus_low_cutoff=focus_low_cutoff,
-#               ctwas_high_cutoff=ctwas_high_cutoff
-#               )
+#   rlist <- list(top_mismatch_genes = top_mismatch_genes,
+#                 mismatch_gene_tissue_tracker = mismatch_gene_tissue_tracker,
+#                 want_tissues=want_tissues,
+#                 ctwas_res=ctwas_res,
+#                 focus_low_cutoff=focus_low_cutoff,
+#                 ctwas_high_cutoff=ctwas_high_cutoff
+#                 )
 wt_idx <- 1
 
 
@@ -99,7 +99,7 @@ do_tissue <- function(wt_idx){
     summarize() %>%
     head(2) # debug
 
-  for (cur_chr in cur_tiss_mismatch_tracker %>% pull(chrom) %>% unique() %>% sort()){
+  for (cur_chr in cur_tiss_chrom_region_df %>% pull(chrom) %>% unique() %>% sort()){
     cur_diag_graph <- readRDS(glue("output/cache/ctwas_diag_{WANT_STUDIES[1]}__{want_tissues[wt_idx]}__eqtl_chr{cur_chr}.rds"))
     print(glue("Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
     print(cur_diag_graph)
@@ -122,9 +122,10 @@ DT::datatable(top_mismatch_genes)
 
 ## By Tissue Figures and Tables
 
-```{r iterate_tissues, message=F,warning=F}
+```{r iterate_tissues, message=F,warning=F, include=F}
+# https://stackoverflow.com/questions/21729415/generate-dynamic-r-markdown-blocks
 out = NULL
-for (i in 1:length(want_tissues)){
+for (i in 10:11){
   out <- c(out, knitr::knit_expand("analysis/chunks/tissue_chunk.Rmd"))
 }
 ```
@@ -136,8 +137,8 @@ for (i in 1:length(want_tissues)){
 Genome wide Bonferroni threshold for `r want_tissues[wt_idx]`: `r mismatch_gene_tissue_tracker %>% filter(tissue == want_tissues[wt_idx]) %>% pull(tiss_bfr_thresh) %>% max(., na.rm=T)`.
 
 ```{r tiss, results='asis', message=T,warning=F}
-do_tissue(wt_idx)
-dt_idx <- wt_idx + 1
+# do_tissue(wt_idx)
+# dt_idx <- wt_idx + 1
 ```
 
  #### `r want_tissues[wt_idx]` ### `r want_tissues[3]`
