--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -14,7 +14,7 @@ library(cowplot)
 library(purrr)
 knitr::opts_chunk$set(echo = FALSE)
 # https://stackoverflow.com/questions/30237310/setting-work-directory-in-knitr-using-opts-chunksetroot-dir-doesnt-wor
-knitr::opts_knit$set(root.dir = file.path(rprojroot::find_rstudio_root_file()))
+# knitr::opts_knit$set(root.dir = file.path(rprojroot::find_rstudio_root_file()))
 options(dplyr.summarise.inform = FALSE)
 
 # https://github.com/rstudio/DT/issues/67
@@ -132,7 +132,8 @@ for (i in 10:11){
 }
 ```
 
-`r paste(knitr::knit(text=out), collapse='\n\n')`
+`RRRr paste(knitr::knit(text=out), collapse='\n\n')`
+`r knitr::knit(text=out)`
 
 ### `r want_tissues[wt_idx]`
 
