dynamic chunk test

--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -15,6 +15,7 @@ library(purrr)
 knitr::opts_chunk$set(echo = FALSE)
 # https://stackoverflow.com/questions/30237310/setting-work-directory-in-knitr-using-opts-chunksetroot-dir-doesnt-wor
 # knitr::opts_knit$set(root.dir = file.path(rprojroot::find_rstudio_root_file()))
+# knitr::opts_chunk$set(root.dir = file.path(rprojroot::find_rstudio_root_file()))
 options(dplyr.summarise.inform = FALSE)
 
 # https://github.com/rstudio/DT/issues/67
@@ -38,7 +39,6 @@ for (study in WANT_STUDIES){
 #                 ctwas_high_cutoff=ctwas_high_cutoff
 #                 )
 wt_idx <- 1
-
 
 do_tissue <- function(wt_idx){
   # First a table showing all mismatching genes
