--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -38,8 +38,6 @@ for (study in WANT_STUDIES){
 #                 focus_low_cutoff=focus_low_cutoff,
 #                 ctwas_high_cutoff=ctwas_high_cutoff
 #                 )
-wt_idx <- 1
-
 do_tissue <- function(wt_idx){
   # First a table showing all mismatching genes
   do_chrom_region <- function(chrom, region_tag2){
@@ -106,8 +104,8 @@ do_tissue <- function(wt_idx){
 
   for (cur_chr in cur_tiss_chrom_region_df %>% pull(chrom) %>% unique() %>% sort()){
     cur_diag_graph <- readRDS(glue("output/cache/ctwas_diag_{WANT_STUDIES[1]}__{want_tissues[wt_idx]}__eqtl_chr{cur_chr}.rds"))
-    # print(glue("Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
-    cat(glue("### Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
+    print(glue("Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
+    # cat(glue("### Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
     print(cur_diag_graph)
   
     cur_tiss_chrom_mismatch_tracker <- cur_tiss_mismatch_tracker %>%
