--- a/analysis/test_analysis.Rmd
+++ b/analysis/test_analysis.Rmd
@@ -104,8 +104,8 @@ do_tissue <- function(wt_idx){
 
   for (cur_chr in cur_tiss_chrom_region_df %>% pull(chrom) %>% unique() %>% sort()){
     cur_diag_graph <- readRDS(glue("output/cache/ctwas_diag_{WANT_STUDIES[1]}__{want_tissues[wt_idx]}__eqtl_chr{cur_chr}.rds"))
-    print(glue("Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
-    # cat(glue("### Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
+    # print(glue("Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
+    cat(glue("### Chromosome {cur_chr}. {want_tissues[wt_idx]}"))
     print(cur_diag_graph)
   
     cur_tiss_chrom_mismatch_tracker <- cur_tiss_mismatch_tracker %>%
@@ -127,7 +127,7 @@ knitr::include_graphics("assets/ctwas_model_and_priors.png", error=F)
 
 # By Tissue Figures and Tables
 
-```{r iterate_tissues, message=F,warning=F, include=F}
+```{r iterate_tissues, message=F, warning=F, include=F}
 # https://stackoverflow.com/questions/21729415/generate-dynamic-r-markdown-blocks
 out = NULL
 # for (i in 1:length(want_tissues)){
@@ -135,6 +135,8 @@ for (i in 1:2){ # debug
   out <- c(out, knitr::knit_expand("analysis/chunks/tissue_chunk.Rmd"))
 }
 ```
+
+`r knitr::knit(text=out)`
 
 ```{r tiss, results='asis', message=T,warning=F}
 # do_tissue(wt_idx)
