--- a/analysis/chunks/tissue_chunk.Rmd
+++ b/analysis/chunks/tissue_chunk.Rmd
@@ -1,4 +1,4 @@
-### `r want_tissues[{{i}}]`
+## `r want_tissues[{{i}}]`
 
 Genome wide Bonferroni threshold for `r want_tissues[{{i}}]`: `r mismatch_gene_tissue_tracker %>% filter(tissue == want_tissues[{{i}}]) %>% pull(tiss_bfr_thresh) %>% max(., na.rm=T)`.
 
