--- a/analysis/ad_analysis.Rmd
+++ b/analysis/ad_analysis.Rmd
@@ -36,8 +36,8 @@ cur_dat <- readRDS("output/cache/AD_Bellenguez_GWAS_NG_2022__eqtl.rds")
 attach(cur_dat)
 # https://stackoverflow.com/questions/21729415/generate-dynamic-r-markdown-blocks
 out = NULL
-# for (i in 1:2){ # debug
-for (i in 1:length(want_tissues)){
+# for (i in 1:length(want_tissues)){
+for (i in 1:2){ # debug
   out <- c(out, knitr::knit_expand("analysis/chunks/tissue_chunk.Rmd"))
 }
 # `r knitr::knit(text=out)`
